[gd_scene load_steps=7 format=3 uid="uid://bwqnldl4r0w2q"]

[ext_resource type="Texture2D" uid="uid://kilcjn74ovqk" path="res://assets/game/fish_frame.png" id="1_oyub5"]
[ext_resource type="Script" uid="uid://dxr3b565q5hv8" path="res://scenes/game/fish_game.gd" id="1_t2o44"]
[ext_resource type="Texture2D" uid="uid://cfwc1volvqfkj" path="res://assets/game/fish_progress_bg.png" id="2_7y5gc"]
[ext_resource type="Texture2D" uid="uid://baojt5sbcviyo" path="res://assets/game/fish_progress.png" id="3_3trt4"]
[ext_resource type="Texture2D" uid="uid://c8mm7akmoh6c" path="res://assets/game/bar.png" id="4_owahd"]
[ext_resource type="Texture2D" uid="uid://6svgbxrce0ji" path="res://assets/game/goldfish.png" id="5_t2o44"]

[node name="FishGame" type="Node2D"]
z_index = 2
script = ExtResource("1_t2o44")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -50.0
offset_right = 5.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
custom_minimum_size = Vector2(15, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oyub5")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 0
grow_vertical = 2
value = 50.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("2_7y5gc")
texture_progress = ExtResource("3_3trt4")

[node name="BarSprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.625, 2.5)
scale = Vector2(0.529, 0.6)
texture = ExtResource("4_owahd")

[node name="FishSprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.5, 43)
rotation = 0.6134051
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_t2o44")

[node name="Timer" type="Timer" parent="."]

[connection signal="value_changed" from="Control/TextureProgressBar" to="." method="_on_texture_progress_bar_value_changed"]
